unpackaged/main/default/objects/WorkIt2__Settings__c/fields/WorkIt2__Advanced_Sessions__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Advanced_Sessions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deprecated: Advanced Session Types</label>
    <type>Checkbox</type>
</CustomField>