unpackaged/main/default/objects/WorkIt2__Settings__c/fields/WorkIt2__AutoContext__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__AutoContext__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deprecated: Automatic Context</label>
    <type>Checkbox</type>
</CustomField>