unpackaged/main/default/objects/WorkIt2__Settings__c/fields/WorkIt2__AutoStartDelay__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__AutoStartDelay__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Auto Start Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>