unpackaged/main/default/objects/WorkIt2__Settings__c/fields/WorkIt2__BrowserFocusTimeout__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__BrowserFocusTimeout__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Browser Focus Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>