unpackaged/main/default/objects/WorkIt2__Settings__c/fields/WorkIt2__Missing_Context_HB__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Missing_Context_HB__c</fullName>
    <defaultValue>20</defaultValue>
    <label>Advanced: Missing Context HB</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>