unpackaged/main/default/objects/WorkIt2__Settings__c/fields/WorkIt2__New_Session_Button__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__New_Session_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Session Switching</label>
    <type>Checkbox</type>
</CustomField>