unpackaged/main/default/objects/WorkIt2__Settings__c/fields/WorkIt2__pollInteval__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__pollInteval__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Advanced: Poll Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>