unpackaged/main/default/objects/WorkIt2__Settings__c/fields/WorkIt2__refocus__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__refocus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Browser Re Focus Autostart</label>
    <type>Checkbox</type>
</CustomField>