unpackaged/main/default/objects/WorkIt2__Settings__c/fields/WorkIt2__uniTab__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__uniTab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unique Session Tracking</label>
    <type>Checkbox</type>
</CustomField>